2013-11-08 MickeM
 * Improved check_nt compatiblity
 * Added back lines as alias for list in top syntaxes.

2013-11-08 MickeM
 * Finally fixed broken unit test on "linux" (Which was a case error as always, damn you ntfs!!)
 * Fixed some dependencies in the vagrant puppet conf
 * Added oracle linux vagrant profile (but doesn't seem to work :(
 * Added support for external script (Linux side)
   WARNING: No timeout handling (yet)
 * Added test cases for external script to ctest

2013-11-07 MickeM
 * Fixed issue with NSCA hostname (NSCAClient load).
 * Fixed check_nt commands
 * Added vagrant files to load-up machines and build NSClient++ (ubuntu)
 
2013-11-03 MickeM
 * Fixed so lua script are now loaded with a missing .lua extension
 * Fixed Lua some remaining invalid lua functio issues.
 * Fixed unit test for Lua scripts.
 * Fixed forwarding (for clients)
 * Fixed test_nrpe (lua)

2013-10-29 MickeM
 * Added json_sprit as a submodule to see if this works better.
 * Changed so json_sprit now builds using their own cmake file which means it should hopefully be better ready for future versions.

2013-10-28 MickeM
 * Compatiblity layer added for most "old" checks.
   The way this works is that CheckCpu is the old check and check_cpu is the new.
 * Fixed a lot of check related bugs
 * Added a bunch of check related options such as exclude and so on and so forth.

2013-10-20 MickeM
 * Added real-time checks for cpu and memory (CheckSystem)
 * Refactored client handling a bit to make it simpler to create stand alone clients.
 * Added check_nrpe client

2013-10-17 MickeM
 * A lot of Linux fixes
 * Refactored real-time stuff to make it easier to add in new places
 * NSCA/NRPE fixes
 
2013-10-10 MickeM
 * Added back CheckWMI based on new filters.
 * Fixed issues with building on Linux
 * Added support for WMI and float types (type 4 and 5)

2013-09-24 MickeM
 * Fixed issue with performance data and byte based units
 * Added total to check_pagefile

2013-09-23 MickeM