@@ -1,3 +1,3 @@
 version=0.4.2
-build=52
-date=2013-11-14
+build=54
+date=2013-11-17
