@@ -1,3 +1,6 @@
+2013-11-17 MickeM
+ * Fixed CheckEventLog compatiblity
+
 2013-11-08 MickeM
  * Improved check_nt compatiblity
  * Added back lines as alias for list in top syntaxes.
